--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 		<div class="col-xl-12 p-0"> 
 			<!-- <img src="img/mainphoto.jpg"> -->
-			<div class="menu"> <un > <li><a href="index.html"> Главная </a></li> <li><a href="Delivery.html">Доставка</a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="About us.html"> О нас </a></li> <li><a href="Cart.html"> <img src="img/icon-cart.png"> Корзина </a></li> </un> </div>
+			<div class="menu"> <un > <li><a href="index.html"> Главная </a></li> <li><a href="Delivery.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="About us.html"> О нас </a></li> <li><a href="Cart.html"> <img src="img/icon-cart.png"> Корзина </a></li> </un> </div>
 		</div>
 	  </div>
 
 
 	  <div class="row">
 	  	<div class="col-md-8 p-0">
-	  		<p id="main_description_text"> Мы делаем симуляторы, разрабатываем тренажеры и программное обеспечение, создаем сложные системы и программно-аппаратные комплексы для вас. </p>
+	  		<p id="main_description_text"> Ежемесячная подписка на коробочки с книгами и атмосферными подарками. </p>
 	  	</div>
 	  	<div class="d-none d-sm-block col-md-4 side_links">
 	  		<div> <a href="OurProjects.html">
