--- a/index.html
+++ b/index.html
@@ -175,8 +175,28 @@
 		 
 
 	<footer class="footer">
-		<p> &copy; 2017 RN Teknik. All Rights Reserved. </p>
-		<p style="margin: 0;"> +7 911 840-11-92 </p>
+
+        <div class="WriteToUs row">
+
+            <div class="col-4">
+                <h2> Напишите нам! </h2>
+
+            </div>
+
+        </div>
+
+        <div class="FooterLinks row">
+
+            <div class="col-4 p-0"> 
+                <un> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="PastMonthsBoxes.html"> Коробочки прошлых месяцев </a></li> </un>
+            </div>
+            
+            <div class="col-4 p-0"> 
+                <un> <li><a href="***.html"> Корпоративные подарки </a></li> <li><a href="****.html"> Сертификат </a></li> </un>
+            </div>
+
+        </div>
+
 	</footer>
 
 
