Cart Icon Hover

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
 <body id="main_page" >
 	<header>
-        <div class="menu"> <un > <li><a href="index.html"> Главная </a></li> <li><a href="Delivery.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="About us.html"> О нас </a></li> <li><a href="Cart.html"> <img src="img/icon-cart.png" id="icon_cart"> Корзина </a></li> </un> </div>
+        <div class="menu"> <un > <li><a href="index.html"> Главная </a></li> <li><a href="Delivery.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="About us.html"> О нас </a></li> 
+        <li class="icon_cart"><div style="display: inline-block;"><a href="Cart.html"> 
+        <div style="    display: inline-block;"> 
+            <img src="img/icon-cart.png" style="margin-top: -5px;" class="img_cart_normal"> <img src="img/icon_cart_red.png" class="img_cart_top">
+        </div>    
+             Корзина </a> </div></li> </un> </div>
 	</header>
 
 
