index.html, main.css
Buttons, styles

--- a/index.html
+++ b/index.html
@@ -181,13 +181,16 @@
         <h2> Напишите нам! </h2>
 
         <div class="row justify-content-center block_writetous"> 
-           <p>+7 951 653 4669 / +7 904 336 3880</p>    
-           <p>getyourbook@yandex.ru</p>
-           <div class="icons_row"> <a href=""><img src=""></a> <a href=""><img src=""></a> <a href=""><img src=""></a> </div>
+
+          <div class="col-6 p-0"> 
+            <div> +7 951 653 4669 / +7 904 336 3880 </div>
+            <div> getyourbook@yandex.ru </div>
+            <div class="icons_row"> <a href="https://www.facebook.com/getyourbook1/"><img src="img/fb.png"></a> <a href="http://vk.com/getyourbook"><img src="img/vk.png"></a> <a href="https://instagram.com/get_your_book"><img src="img/ig.png"></a> </div>
+          </div> 
         </div>
 
 
-        <div class="row">
+        <div class="row green">
 
             <div class="col-4 p-0"> 
                 <un> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="PastMonthsBoxes.html"> Коробочки прошлых месяцев </a></li> </un>
