--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li class="icon_cart">
           <div style="display: inline-block;">
             <a href="Cart.html" class="menu_cart"> 
-              <div style="    display: inline-block;" > 
+              <div style="display: inline-block;" > 
                 <img src="img/icon-cart.png" style="margin-top: -5px;" class="img_cart_normal"> 
                 <img src="img/icon_cart_red.png" class="img_cart_top">
                 Корзина 
@@ -44,8 +44,8 @@
 
 <div class="container-fluid">	  
 	  <div class="row">
-	  	<div class="col-lg-12 p-0" id="header_main">
-            <img src="img/logo.png">
+	  	<div class="col-lg-12 p-0" style="text-align: center;" id="header_main">
+            <img src="img/logo.png" style="margin-top: 17%;">
 	  		<p id="main_description_text"> Ежемесячная подписка на коробочки с книгами и атмосферными подарками. </p>
 	  	</div>
 
