index.html main.css
main logo
main description text

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 
 
 <div class="container-fluid">	  
-	  <div class="row">
+	  <div class="row block_main" >
 	  	<div class="col-lg-12 p-0" style="text-align: center;" id="header_main">
-            <img src="img/logo.png" style="margin-top: 17%;">
-	  		<p id="main_description_text"> Ежемесячная подписка на коробочки с книгами и атмосферными подарками. </p>
+        <img src="img/logo.png" style="margin-top: 17%;"> 
+          <p id="main_description_text"> Ежемесячная подписка на коробочки с книгами <br> и атмосферными подарками. 
+          </p>
 	  	</div>
 
 
