--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="carousel-item active">
 
       <div class="row justify-content-center">
-        <div class="col-lg-4 d-flex flex-column justify-content-end"">
+        <div class="col-lg-4 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/mix.png" id="mix"> 
             </div>
@@ -73,7 +73,7 @@
         </div>
 
 
-        <div class="col-lg-4 d-flex flex-column justify-content-end""> 
+        <div class="col-lg-4 d-flex flex-column justify-content-end"> 
           <div>
              <ol class="carousel-indicators">
               <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
@@ -107,7 +107,7 @@
 
     <div class="carousel-item ">
       <div class="row justify-content-center">
-        <div class="col-lg-4 d-flex flex-column justify-content-end"">
+        <div class="col-lg-4 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/fiction.png" id="fiction"> 
             </div>
@@ -117,7 +117,7 @@
         </div>
 
 
-        <div class="col-lg-4 d-flex flex-column justify-content-end""> 
+        <div class="col-lg-4 d-flex flex-column justify-content-end"> 
 
           <div>
              <ol class="carousel-indicators">
@@ -148,7 +148,7 @@
 
     <div class="carousel-item ">
       <div class="row justify-content-center">
-        <div class="col-lg-4 d-flex flex-column justify-content-end"">
+        <div class="col-lg-4 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/non-fiction.png"> 
             </div>
@@ -157,7 +157,7 @@
             </div>
         </div>
 
-        <div class="col-lg-4 d-flex flex-column justify-content-end""> 
+        <div class="col-lg-4 d-flex flex-column justify-content-end"> 
           <div>
              <ol class="carousel-indicators">
               <li data-target="#carouselIndicators" data-slide-to="0"></li>
@@ -189,7 +189,7 @@
     <div class="carousel-item ">
 
       <div class="row justify-content-center">
-        <div class="col-lg-4 d-flex flex-column justify-content-end"">
+        <div class="col-lg-4 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/classic.png" id="classic"> 
             </div>
@@ -199,7 +199,7 @@
         </div>
 
 
-        <div class="col-lg-4 d-flex flex-column justify-content-end""> 
+        <div class="col-lg-4 d-flex flex-column justify-content-end"> 
           <div>
              <ol class="carousel-indicators">
               <li data-target="#carouselIndicators" data-slide-to="0"></li>
@@ -233,7 +233,7 @@
 
     <div class="carousel-item ">
       <div class="row justify-content-center">
-        <div class="col-lg-4 d-flex flex-column justify-content-end"">
+        <div class="col-lg-4 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/self-improvement.png" id="fiction"> 
             </div>
@@ -243,7 +243,7 @@
         </div>
 
 
-        <div class="col-lg-4 d-flex flex-column justify-content-end""> 
+        <div class="col-lg-4 d-flex flex-column justify-content-end"> 
 
           <div>
              <ol class="carousel-indicators">
@@ -274,7 +274,7 @@
 
     <div class="carousel-item ">
       <div class="row justify-content-center">
-        <div class="col-lg-4 d-flex flex-column justify-content-end"">
+        <div class="col-lg-4 d-flex flex-column justify-content-end">
             <div class="box_img">
                <img src="img/english.png"> 
             </div>
@@ -283,7 +283,7 @@
             </div>
         </div>
 
-        <div class="col-lg-4 d-flex flex-column justify-content-end""> 
+        <div class="col-lg-4 d-flex flex-column justify-content-end"> 
           <div>
              <ol class="carousel-indicators">
               <li data-target="#carouselIndicators" data-slide-to="0"></li>
