--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
     <div class="side_menu">
-        <un> <li>Коробочки</li> <li>Стоимость</li> <li>Заказать</li> <li>Отзывы</li> <li>Скидка</li> <li>Контакты</li>
+        <un> <li><a href=" "> Коробочки </a></li> <li><a href=" "> Стоимость </a></li> <li><a href=" "> Заказать </a></li> <li><a href=" "> Отзывы </a></li> <li><a href=" "> Скидка </a></li> <li><a href=" "> Контакты </a></li>
         </un>
     </div>
 
