--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body id="main_page" >
 	<header>
    <div class="menu"> 
-    <un > <li><a href="index.html"> Главная </a></li> <li><a href="Delivery.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="About us.html"> О нас </a></li> 
+    <un > <li><a href="index.html"> Главная </a></li> <li><a href="Delivery.html"> Доставка </a></li> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="AboutUs.html"> О нас </a></li> 
         <li class="icon_cart">
           <div style="display: inline-block;">
             <a href="Cart.html" class="menu_cart"> 
@@ -34,7 +34,7 @@
 
 
     <div class="side_menu">
-        <un> <li><a href=" "> Коробочки </a></li> <li><a href=" "> Стоимость </a></li> <li><a href=" "> Заказать </a></li> <li><a href=" "> Отзывы </a></li> <li><a href=" "> Скидка </a></li> <li><a href=" "> Контакты </a></li>
+        <un> <li><a href="#carouselControls"> Коробочки </a></li> <li><a href="#price"> Стоимость </a></li> <li><a href="#howtoorder"> Как заказать </a></li> <li><a href="#reviews"> Отзывы </a></li> <li><a href="#discount"> Скидка </a></li> <li><a href="# "> Контакты </a></li>
         </un>
     </div>
 
@@ -49,9 +49,6 @@
           <p id="main_description_text"> Ежемесячная подписка на коробочки с книгами <br> и атмосферными подарками. 
           </p>
 	  	</div>
-
-
-
 	  </div>	 
 
 		
@@ -84,7 +81,7 @@
               <li data-target="#carouselIndicators" data-slide-to="5"></li>
             </ol>
            </div>
-           <div class="box_description" >
+           <div id="box_description_anchor" class="box_description" >
                <p>Коробочка для книжных меломанов. Здесь может оказаться любая тематика (кроме книг на английском), а вы наверняка, откроете для себя что-нибудь новенькое.</p>
            </div>
            <div class="box_name">
@@ -328,7 +325,7 @@
 
 
       
-  <h1>Сколько стоит?</h1>
+  <h1 id="price"> Сколько стоит? </h1>
 
       <div class="row block_prices">
 
@@ -355,25 +352,24 @@
       </div>
 
 
-  <h1>Как заказать?</h1>
+  <h1 id="howtoorder">Как заказать?</h1>
 
 
-<!-- style="height: 400px" -->
     <div class="row " >
-        <div class="col-lg-4 offset-lg-1 " >
+        <div class="col-lg-4 offset-lg-1">
             <p class="step_number"> 1 </p> 
             <p>Выбирайте свой любимый книжный жанр и длительность подписки: 1, 3 или 6 месяцев.</p> 
         </div>
         <div class="col-lg-7">
         </div>
-        <div class="col-lg-4 offset-lg-4 " >
+        <div class="col-lg-4 offset-lg-4">
           <p class="step_number">2</p> 
           <p>Оформляйте заказ на сайте до 25-го числа каждого месяца.</p>
         </div>
         <div class="col-lg-4">
         </div>
-        <!-- style="margin-left: -40px;" -->
-        <div class="col-lg-4 offset-lg-7 "  >
+
+        <div class="col-lg-4 offset-lg-7">
           <p class="step_number">3</p> 
           <p>Запасайтесь терпением и готовьтесь к приятному сюрпризу - все коробочки отправляются к своим читателям 28-го числа.</p>
         </div>
@@ -382,7 +378,7 @@
     </div>
 
 
-    <h1>Отзывы</h1>
+    <h1 id="reviews">Отзывы</h1>
       
     <div class="row justify-content-center">
         <div class="col-5">
@@ -409,7 +405,7 @@
 
     <div class="row justify-content-center">
         <div class="col-8">   
-            <h3>Получи скидку 7% на следующую покупку и будь в курсе наших новостей!</h3>
+            <h3 id="discount"> Получи скидку 7% на следующую покупку и будь в курсе наших новостей! </h3>
         </div> 
     </div>
 
