--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
     <div class="side_menu">
-        <un> <li><a href="#carouselControls"> Коробочки </a></li> <li><a href="#price"> Стоимость </a></li> <li><a href="#howtoorder"> Как заказать </a></li> <li><a href="#reviews"> Отзывы </a></li> <li><a href="#discount"> Скидка </a></li> <li><a href="# "> Контакты </a></li>
+        <un> <li><a href="#carouselControls"> <div class="red_dot"></div> Коробочки </a></li> <li><a href="#price"> <div class="red_dot"></div> Стоимость </a></li> <li><a href="#howtoorder"> <div class="red_dot"></div> Как заказать </a></li> <li><a href="#reviews"> <div class="red_dot"></div> Отзывы </a></li> <li><a href="#discount"> <div class="red_dot"></div> Скидка </a></li> <li><a href="#contscts"> <div class="red_dot"></div> Контакты </a></li>
         </un>
     </div>
 
@@ -445,26 +445,27 @@
 
         
 
-        <h2> Напишите нам! </h2>
+        <h2 id="contscts"> Напишите нам! </h2>
 
         <div class="row justify-content-center block_writetous"> 
 
           <div class="col-6 p-0"> 
             <div> +7 951 653 4669 / +7 904 336 3880 </div>
             <div> getyourbook@yandex.ru </div>
-            <div class="icons_row"> <a href="https://www.facebook.com/getyourbook1/"><img src="img/fb.png"></a> <a href="http://vk.com/getyourbook"><img src="img/vk.png"></a> <a href="https://instagram.com/get_your_book"><img src="img/ig.png"></a> </div>
+            <div class="icons_row"> 
+              <a href="https://www.facebook.com/getyourbook1/"><img src="img/fb.png"></a> <a href="http://vk.com/getyourbook"><img src="img/vk.png"></a> <a href="https://instagram.com/get_your_book"><img src="img/ig.png"></a> </div>
           </div> 
         </div>
 
 
         <div class="row green">
 
-            <div class="col-4 p-0"> 
+            <div class="col-4 p-0" style="margin-left: 30px;"> 
                 <un> <li><a href="FAQ.html"> Частые вопросы </a></li> <li><a href="PastMonthsBoxes.html"> Коробочки прошлых месяцев </a></li> </un>
             </div>
             
             <div class="col-4 p-0"> 
-                <un> <li><a href="***.html"> Корпоративные подарки </a></li> <li><a href="****.html"> Сертификат </a></li> </un>
+                <un> <li><a href="CorporatePresents.html"> Корпоративные подарки </a></li> <li><a href="Certificate.html"> Сертификат </a></li> </un>
             </div>
 
         </div>
