--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
     <div class="side_menu">
-        <un> <li><a href="#carouselControls"> <div class="red_dot"></div> Коробочки </a></li> <li><a href="#price"> <div class="red_dot"></div> Стоимость </a></li> <li><a href="#howtoorder"> <div class="red_dot"></div> Как заказать </a></li> <li><a href="#reviews"> <div class="red_dot"></div> Отзывы </a></li> <li><a href="#discount"> <div class="red_dot"></div> Скидка </a></li> <li><a href="#contscts"> <div class="red_dot"></div> Контакты </a></li>
+        <un> <li><a href="#carouselControls"> <div class="red_dot"></div> Коробочки </a></li> <li><a href="#price"> <div class="red_dot"></div> Стоимость </a></li> <li><a href="#howtoorder"> <div class="red_dot"></div> Как заказать </a></li> <li><a href="#reviews"> <div class="red_dot"></div> Отзывы </a></li> <li><a href="#discount"> <div class="red_dot"></div> Скидка </a></li> <li><a href="#contacts"> <div class="red_dot"></div> Контакты </a></li>
         </un>
     </div>
 
@@ -449,7 +449,7 @@
 
         
 
-        <h2 id="contscts"> Напишите нам! </h2>
+        <h2 id="contacts"> Напишите нам! </h2>
 
         <div class="row justify-content-center block_writetous"> 
 
@@ -490,7 +490,7 @@
   <div class="modal-dialog modal-dialog-" >
 
 
-    <div class="modal-content"">  
+    <div class="modal-content">  
         <div >
           <button type="button" class="close" data-dismiss="modal" style="margin: 20px 20px 0 0;">&times;</button>
         </div>
