--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,9 +33,31 @@
 
 
 <div class="container-fluid">	  
-	  <div class="row block_main" >
+	  <div class="row block_main">
 	  	<div class="col-lg-12 p-0" style="text-align: center;" id="header_aboutus"> 
           <h1 id="aboutus_description_text"> О нас </h1>
+          <img src="img/img-2375.png" style="margin-top: 30px;">
+            <div class="col-lg-10 p-0 offset-1"  style="text-align: left;"> 
+              <p> Нас зовут Оля и Лена. Мы дружим уже больше 20 лет! Родились и познакомились в холодном Мурманске, а потом вместе переехали в Петербург 
+              </p>
+              <p> Нам всегда хотелось какой-нибудь свой небольшой проект. Было много разных идей, и интересных, и странных, и глупых, что уж там скрывать. Но хотелось чего-то душевного, хотелось делиться теплыми эмоциями. Так и родилась эта идея. 
+              </p>
+              <p> Наша цель - сформировать и поддержать привычку читать книги. Именно поэтому у нас можно оформить подписку сразу на полгода. Вы удивитесь, как много нового можно узнать, читая хотя бы две книги в месяц! Попробуйте! 
+              </p>
+            </div> 
+          <h1 id="aboutus_description_text"> Почему стоит заказать у нас </h1>
+              <div class="row why_order_from_us">
+                <div class="col-lg-4">
+                  Мы следим за новинками, читаем блоги, общаемся с книгоманами, сами много читаем и стараемся подбирать самые неординарные варианты.
+                </div>
+                <div class="col-lg-4">
+                  Вам не придется тратить время на выбор книги и поход в магазин, ведь даже онлайн-шоппинг - дело нелегкое.
+                </div>
+                <div class="col">
+                  В коробочке вас ждут не только книги, но и подарки ручной работы, которые поднимут настроение и создадут подходящую атмосферу для чтения.
+                </div>
+              </div>
+            </div>
 	  	</div>
 	  </div>	 
 
