--- a/AboutUs.html
+++ b/AboutUs.html
@@ -11,7 +11,7 @@
 		
 </head>
 
-<body id="aboutus" >
+<body id="AboutUs" >
 	<header>
    <div class="menu"> 
     <img src="img/logo.png" style="height: 40px; position: absolute; left: 75px;">
@@ -37,7 +37,7 @@
 	  	<div class="col-lg-12 p-0" style="text-align: center;" id="header_aboutus"> 
           <h1 id="aboutus_description_text"> О нас </h1>
           <img src="img/img-2375.png" style="margin-top: 30px;">
-            <div class="col-lg-10 p-0 offset-1"  style="text-align: left;"> 
+            <div class="col-lg-10 p-0 offset-1"  style="text-align: left; margin-top: 100px; margin-bottom: 150px;"> 
               <p> Нас зовут Оля и Лена. Мы дружим уже больше 20 лет! Родились и познакомились в холодном Мурманске, а потом вместе переехали в Петербург 
               </p>
               <p> Нам всегда хотелось какой-нибудь свой небольшой проект. Было много разных идей, и интересных, и странных, и глупых, что уж там скрывать. Но хотелось чего-то душевного, хотелось делиться теплыми эмоциями. Так и родилась эта идея. 
@@ -46,14 +46,14 @@
               </p>
             </div> 
           <h1 id="aboutus_description_text"> Почему стоит заказать у нас </h1>
-              <div class="row why_order_from_us">
+              <div class="row why_order_from_us" style="padding-left: 15px; padding-right: 15px;">
                 <div class="col-lg-4">
                   Мы следим за новинками, читаем блоги, общаемся с книгоманами, сами много читаем и стараемся подбирать самые неординарные варианты.
                 </div>
                 <div class="col-lg-4">
                   Вам не придется тратить время на выбор книги и поход в магазин, ведь даже онлайн-шоппинг - дело нелегкое.
                 </div>
-                <div class="col">
+                <div class="col-lg-4">
                   В коробочке вас ждут не только книги, но и подарки ручной работы, которые поднимут настроение и создадут подходящую атмосферу для чтения.
                 </div>
               </div>
